--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ canonical: https://kaihengqian.github.io/
 # Links 
 # If you don't need one of them, you may delete the corresponding line.
 google_scholar: https://scholar.google.com/citations?user=vhkvWUAAAAAJ&hl=en
-cv_link: #
+cv_link: ./assets/files/curriculum_vitae.pdf
 github_link: https://github.com/KaihengQian
 linkedin: https://www.linkedin.com/in/kaiheng-qian-65950b272/
 twitter: #
